--- a/tutorio/styles/index.css
+++ b/tutorio/styles/index.css
@@ -8,8 +8,8 @@ footer{
 }
 
 .bg { 
-    /* The image used */
-    background-image: url("../img/ecommerce-analytics.jpeg");
+    /* The image used 
+    background-image: url("../img/ecommerce-analytics.jpeg");*/
 
     /* Full height */
     height: 100%; 
@@ -36,15 +36,33 @@ footer{
     
 }
 
-.button{
-    text-align:center;
-    margin-top:150px;
-}
+
 
 .h_line{
     width:100%; 
     height:1px; 
     background: black;
+}
+
+.header_container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: absolute;
+    height: 100px;
+    width: 100%;
+    background-color: rgba(0,0,0,0.3);
+    z-index: 9999;
+}
+
+.header_container a {
+    margin-top: 30px;
+    margin-left: 30px;
+    font-size: 35px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 
@@ -54,9 +72,11 @@ h5 {
     text-align: center;
 }
 h1{
-    margin: 15%  40% 0;
+    position: absolute;
+    margin-top: 25%;
     padding-top: 50px;
     height: 100px;
+    width: 20%;
     font-size: 2em;
     color: white;
     text-align: center;
@@ -78,7 +98,7 @@ h2, h5, h4{
 }
 
 h4{
-    color: #CFCFD1;
+    color: #EFEFEF;
     
 }
 
@@ -136,8 +156,8 @@ li a {
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.9);
-    position: relative;
+    background-color: rgba(100, 49, 115, 0.9);
+
 
 
 
@@ -193,8 +213,6 @@ li a {
 
 
 .gallery {
-    display: flex;
-    justify-content: center;
     margin: 100px;
     border: 5px solid #ccc;
     width: 300px;
@@ -245,61 +263,34 @@ li a {
     margin-left: 20%;
 }
 
-.team{
-    height: 70%;
+
+
+
+
+
+/* ---- particles.js container ---- */
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #643173;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+
+.particles_cont {
+    display: flex;
+    justify-content: center;
 }
 
-.topnav a {
-    font-family:  'Arvo', serif;
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 18px 20px;
-  text-decoration: none;
-  font-size: 17px;
-}
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
 
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
 
-.topnav .icon {
-  display: none;
-}
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-}
 
