--- a/tutorio/styles/index.css
+++ b/tutorio/styles/index.css
@@ -20,6 +20,22 @@ footer{
     background-size: cover;
 }
 
+.bg h1{
+    top: 50%;
+    position: absolute;
+    padding-top: 50px;
+    height: 100px;
+    width: 20%;
+    font-size: 2em;
+    color: white;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.3);
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1.6px;
+    -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
+
 
 .exp_b{
     background-color: #4CAF50;
@@ -72,17 +88,7 @@ h5 {
     text-align: center;
 }
 h1{
-    position: absolute;
-    margin-top: 25%;
-    padding-top: 50px;
-    height: 100px;
-    width: 20%;
-    font-size: 2em;
-    color: white;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.3);
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 1.6px;
+    
 }
 
 
@@ -156,7 +162,7 @@ li a {
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(100, 49, 115, 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
 
 
 
@@ -274,8 +280,7 @@ li a {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #643173;
-  background-image: url("");
+  background-image: url("../img/cosmos.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
