--- a/Ivy/styles/index.css
+++ b/Ivy/styles/index.css
@@ -149,7 +149,6 @@
 
 #offer-container {
   width: 100%;
-  height: 100vh;
   box-sizing: border-box;
   padding-top: 100px;
   font-family: 'Maven Pro', sans-serif;
@@ -161,6 +160,8 @@
   margin: 20px 0;
   display: flex;
   box-sizing: border-box;
+  padding: 20px;
+  justify-content: center;
 }
 
 .offer .offer-number {
@@ -168,11 +169,13 @@
   height: 100%;
   width: 40px;
   font-size: 30px;
+  box-sizing: border-box;
+  padding-left: 20px;
   color: #00847B;
 }
 
 .offer p {
-  width: 500px;
+  width: 450px;
   font-size: 20px;
 }
 
@@ -182,14 +185,9 @@
   color: #00847B;
 }
 
-.left{
-  padding-left: 200px;
-  justify-content: flex-start;
-}
-
-.right{
-  padding-right: 200px;
-  justify-content: flex-end;
+.left,
+.right {
+  padding-left: 0;
 }
 
 
@@ -345,6 +343,15 @@
   #bot-messanger {
     width: 480px;
   }
+
+
+  .left{
+    padding-left: 200px;
+  }
+
+  .right{
+    padding-right: 200px;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -381,6 +388,14 @@
 
   .dot-color-3 {
     background-color: #8DC7D6;
+  }
+
+  .left{
+    padding-left: 300px;
+  }
+
+  .right{
+    padding-right: 300px;
   }
 
 }
