--- a/Ivy/styles/index.css
+++ b/Ivy/styles/index.css
@@ -67,12 +67,12 @@
 
 #main-bot-conv-container {
   width: 100%;
-  height: 70vh;
+  height: 60vh;
   margin-top: 20px;
 }
 
 #bot-messanger {
-  width: 300px;
+  width: 250px;
   height: 100%;
   margin: 0 auto;
   box-sizing: border-box;
@@ -80,7 +80,7 @@
   position: relative;
   border-radius: 10px;
   box-shadow: 0px 0px 25px -1px #aeaeae;
-  font-size: 20px;
+  font-size: 15px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -95,7 +95,7 @@
 .menu {
   width: 100%;
   height: 50px;
-  font-size: 30px;
+  font-size: 20px;
   border-radius: 8px;
   margin-bottom: 20px;
   display: flex;
@@ -113,13 +113,13 @@
   box-sizing: border-box;
   padding: 10px;
   font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .button {
   background-color: #FFFFFF;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: 4px solid #FFFCF7;
   box-shadow: 0px 0px 40px 8px #8B1EFF;
@@ -132,7 +132,7 @@
   box-sizing: border-box;
   padding: 10px;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 15px;
   color: #353333;
   font-family: 'Montserrat', sans-serif;
 }
@@ -193,10 +193,9 @@
 
 #platforms-container {
   width: 100%;
-  height: 500px;
+  height: 250px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   background-color: #7982C6;
   background: -webkit-radial-gradient(#B8FFA3, #009396);
 }
@@ -204,12 +203,12 @@
 #platforms-container h2 {
   font-family: 'Maven Pro', sans-serif;
   color: #FFFFFF;
-  font-size: 35px;
+  font-size: 20px;
+  margin: 15px 0 30px;
 }
 
 #platforms {
-  width: 50%;
-  height: 200px;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -220,7 +219,7 @@
 }
 
 .platform-img-container img {
-  width: 140px;
+  width: 70px;
   margin: 0 auto;
 }
 
@@ -352,6 +351,15 @@
   .right{
     padding-right: 200px;
   }
+
+  #platforms-container h2 {
+    font-size: 25px;
+    margin: 15px 0 40px;
+  }
+
+  #platforms {
+    width: 70%;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -398,6 +406,26 @@
     padding-right: 300px;
   }
 
+  #platforms-container {
+    height: 600px;
+    justify-content: center;
+  }
+
+  #platforms-container h2 {
+    flex: 1;
+    font-size: 35px;
+    margin: 25px 0 60px;
+  }
+
+  #platforms {
+    flex: 3;
+    width: 70%;
+  }
+
+  .platform-img-container img {
+    width: 140px;
+  }
+
 }
 
 @media only screen and (min-width: 1367px) {
@@ -419,5 +447,13 @@
 
   #bot-messanger {
     width: 400px;
+  }
+
+  #platforms-container h2 {
+    font-size: 45px;
+  }
+
+  #platforms {
+    width: 60%;
   }
 }
