--- a/Ivy/styles/index.css
+++ b/Ivy/styles/index.css
@@ -225,7 +225,6 @@
 
 #contacts {
   width: 100%;
-  height: 300px;
   box-sizing: border-box;
   padding-top: 20px;
 }
@@ -235,29 +234,33 @@
   height: 70%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .contact-container {
-  width: 30%;
+  width: 90%;
   background-color: #EEEEEE;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   border-radius: 10px;
+  margin: 10px 0 20px;
+  box-sizing: border-box;
+  padding: 20px;
 }
 
 .contact-container h4 {
   font-family: 'Maven Pro', sans-serif;
   color: #009396;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .contact-container p {
   font-family: 'Maven Pro', sans-serif;
   color: #5994CC;
-  font-size: 25px;
+  font-size: 15px;
 }
 
 #about-us {
@@ -360,6 +363,12 @@
   #platforms {
     width: 70%;
   }
+
+  .contact-container {
+    width: 30%;
+    margin: 5px 0 20px;
+    padding: 10px;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -426,6 +435,24 @@
     width: 140px;
   }
 
+
+  #contacts {
+    height: 300px;
+  }
+
+  .contact-container {
+    width: 30%;
+
+  }
+
+  .contact-container h4 {
+    font-size: 25px;
+  }
+
+  .contact-container p {
+    font-size: 20px;
+  }
+
 }
 
 @media only screen and (min-width: 1367px) {
@@ -455,5 +482,13 @@
 
   #platforms {
     width: 60%;
+  }
+
+  .contact-container h4 {
+    font-size: 30px;
+  }
+
+  .contact-container p {
+    font-size: 25px;
   }
 }
