--- a/Ivy/styles/normalize.css
+++ b/Ivy/styles/normalize.css
@@ -8,7 +8,8 @@ h6,
 p,
 textarea,
 li,
-ul {
+ul,
+a {
   margin: 0;
   padding: 0;
 }
@@ -28,3 +29,7 @@ ul,
 li {
   list-style:none;
 }
+
+a, a:link, a:visited, a:active, a:hover {
+ text-decoration: none;
+ }
