--- a/cryptograf_website/styles/index.css
+++ b/cryptograf_website/styles/index.css
@@ -22,9 +22,15 @@ a {
 }
 
 header {
+  display: none;
   width: 100%;
   position: fixed;
   z-index: 100;
+}
+
+#header-container {
+  width: 100%;
+  height: 60px;
 }
 
 #header-container {
@@ -35,8 +41,8 @@ header {
 }
 
 #logo img {
-  width: 244px;
-  height: 43px;
+  width: 122px;
+  height: 33px;
   opacity: 0.6;
 }
 
@@ -45,6 +51,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  display: none;
 }
 
 #nav-links {
@@ -87,30 +94,94 @@ header {
   font-family: "CircularStd-Book", sans-serif;
 }
 
+/* graph styles */
+#graph-container {
+  min-height: 90px;
+  width: 100%;
+  height: 30vh;
+}
+
+#graph {
+  width: 300px;
+  height: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+#graph img {
+  position: absolute;
+  margin: 0 auto;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#gradient-container {
+  position: absolute;
+  margin: 0 auto;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  background-image: radial-gradient(70% 66% at center, rgba(255,255,255,0), #373845 70%);
+}
+
+#graph-logo {
+  position: absolute;
+  margin: 0 auto;
+  width: 50px;
+  height: 50px;
+  top: 90px;
+  left: 0;
+  right: 0;
+}
+
+#graph-logo img {
+  width: 100%;
+}
+
+#graph-header {
+  position: absolute;
+  margin: 0 auto;
+  width: 120px;
+  height: 50px;
+  top: 150px;
+  left: 0;
+  right: 0;
+}
+
+#graph-header img {
+  width: 100%;
+}
+
+/* -------------- */
+
 /* Zhekos part start */
 
 #top-info-container {
-  display: flex;
-  justify-content: space-around;
   margin: 0 auto;
-}
-
-#bottom-info-container {
-  display: flex;
-  justify-content: space-between;
+  width: 100%;
 }
 
 #top-row-container {
   display: flex;
+  justify-content: space-around;
+  flex-direction: column-reverse;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.phone-container {
+  width: 70%;
+  margin: 15px auto 0;
 }
 
 .phone-container img {
-  border-radius: 45px;
+  width: 100%;
+  border-radius: 30px;
   box-shadow: 0 24px 43px rgba(0,0,0,0.25);
-}
-
-#bottom-row-container {
-  display: flex;
 }
 
 span {
@@ -123,16 +194,47 @@ span {
 }
 
 #top-text-container h1 {
+  text-align: center;
   letter-spacing: 0.4px;
-  font-size: 46px;
+  font-size: 23px;
   font-family: 'SF-Pro-Display-Light', sans-serif;
 }
 
 #top-text-container p {
+  box-sizing: border-box;
+  padding: 20px 10px;
+  text-align: center;
   opacity: 0.6;
   letter-spacing: 0.4px;
-  font-size: 18px;
+  font-size: 15px;
   font-family: 'SF-Pro-Display-Regular', sans-serif;
+}
+
+#stores-container {
+  box-sizing: border-box;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+#stores-container img {
+  height: 40px;
+}
+
+#bottom-info-container {
+  margin: 0 auto;
+  width: 100%;
+}
+
+#bottom-row-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
 }
 
 #bottom-text-container {
@@ -142,15 +244,20 @@ span {
 }
 
 #bottom-text-container h1 {
+  margin-top: 40px;
+  text-align: center;
   letter-spacing: 0.4px;
-  font-size: 46px;
+  font-size: 23px;
   font-family: 'SF-Pro-Display-Light', sans-serif;
 }
 
 #bottom-text-container p {
+  box-sizing: border-box;
+  padding: 20px 10px;
+  text-align: center;
   opacity: 0.6;
   letter-spacing: 0.4px;
-  font-size: 18px;
+  font-size: 15px;
   font-family: 'SF-Pro-Display-Regular', sans-serif;
 }
 
@@ -396,16 +503,6 @@ footer {
   #bottom-text-container p {
     padding: 50px 0;
     padding-right: 150px;
-  }
-
-  #stores-container {
-    display: flex;
-    align-content: center;
-  }
-
-  #top-text-container img {
-    height: 40px;
-    padding-right: 20px;
   }
 
 /* Zhekos part end */
