--- a/cryptograf_website/styles/index.css
+++ b/cryptograf_website/styles/index.css
@@ -264,16 +264,119 @@ span {
 /* Zhekos part end */
 
 /* Roman */
+
+#features{
+  margin: auto;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  margin: 20px auto 0;
+}
+
+#features-title {
+  font-family: "Helvetica";
+  font-size: 23px;
+  letter-spacing: 0.4px;
+  color: #ffffff;
+  margin-bottom: 25px;
+}
+
+#features-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+#features-left,
+#features-mid,
+#features-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#features-left img,
+#features-mid img,
+#features-right img {
+  margin-bottom: 19px;
+  width: 77px;
+  height: 77px;
+}
+
+#features-left-title,
+#features-mid-title,
+#features-right-title {
+  text-align: center;
+  font-family: "SF-Pro-Display-Light";
+  color: #ffffff;
+  letter-spacing: 0.4px;
+}
+
+#features-left-description,
+#features-mid-description,
+#features-right-description {
+  box-sizing: border-box;
+  padding: 20px 15px;
+  text-align: center;
+  font-family: "SF-Pro-Display-Regular";
+  letter-spacing: 0.4px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+#stores {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: #896aeb;
+  height: 170px;
+}
+
+#stores-images {
+  box-sizing: border-box;
+  padding: 10px;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+#stores-images a {
+  width: 135px;
+  height: 40px;
+}
+
+#stores-images img {
+  width: 100%;
+  height: 100%;
+}
+
+#stores-title {
+  font-family: "SF-Pro-Display-Light";
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: 300;
+  letter-spacing: 0.4px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 footer {
   display: flex;
   margin: auto;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   background-color:  #373845;
   align-items: center;
 }
 
 #footer-mid-content {
+  margin: 10px 0;
   width: 114px;
   display: flex;
   flex-direction: row;
@@ -287,6 +390,7 @@ footer {
 }
 
 #footer-left-content {
+  margin: 10px 0;
   font-size: 15px;
   font-family: "CircularStd-Book", sans-serif;
   color: #FFFFFF;
@@ -298,6 +402,7 @@ footer {
 }
 
 #footer-right-content{
+  margin: 10px 0;
   width: 199px;
   color: #FFFFFF;
   opacity: 0.6;
@@ -305,55 +410,7 @@ footer {
   font-family: "CircularStd-Book", sans-serif;
 }
 
-#stores {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  background-color: #896aeb;
-}
 
-#stores-images {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-#stores-title {
-  font-family: "SF-Pro-Display-Light";
-  color: #ffffff;
-}
-
-#features{
-  margin: auto;
-  background-color: transparent;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#features-title {
-  font-family: "Helvetica";
-}
-
-#features-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-
-#features-left-title,
-#features-mid-title,
-#features-right-title {
-  font-family: "SF-Pro-Display-Light";
-}
-
-#features-left-description,
-#features-mid-description,
-#features-right-description {
-  font-family: "SF-Pro-Display-Regular";
-}
 
 /* End */
 
@@ -508,6 +565,46 @@ footer {
 /* Zhekos part end */
 
 /* Roman */
+
+#features{
+  width: 1170px;
+}
+#features-title{
+  font-size: 46px;
+  margin-bottom: 82px;
+}
+
+#features-container {
+  width: 1170px;
+}
+#features-left,
+#features-mid,
+#features-right {
+  margin-bottom: 171px;
+}
+
+#features-left img,
+#features-mid img,
+#features-right img {
+  margin-bottom: 19px;
+  width: 77px;
+  height: 77px;
+}
+
+#features-left-title,
+#features-mid-title,
+#features-right-title {
+  margin-bottom: 26px;
+  font-size: 32px;
+}
+
+#features-left-description,
+#features-mid-description,
+#features-right-description {
+  width: 357px;
+  font-size: 16px;
+}
+
   footer {
     width: 1170px;
     height: 100px;
@@ -518,54 +615,10 @@ footer {
   }
   #stores-title {
     font-size: 46px;
-    font-weight: 300;
-    letter-spacing: 0.4px;
     margin-top: 73px;
     margin-bottom: 33.5px;
   }
   #stores-images{
       width: 340px;
-  }
-  #features{
-    width: 1170px;
-  }
-  #features-title{
-    font-size: 46px;
-    letter-spacing: 0.4px;
-    color: #ffffff;
-    margin-bottom: 82px;
-  }
-  #features-container {
-    width: 1170px;
-  }
-  #features-left,
-  #features-mid,
-  #features-right {
-    margin-bottom: 171px;
-  }
-  #features-left img,
-  #features-mid img,
-  #features-right img {
-    margin-bottom: 19px;
-    width: 77px;
-    height: 77px;
-  }
-
-  #features-left-title,
-  #features-mid-title,
-  #features-right-title {
-    margin-bottom: 26px;
-    font-size: 32px;
-    color: #ffffff;
-    letter-spacing: 0.4px;
-  }
-
-  #features-left-description,
-  #features-mid-description,
-  #features-right-description {
-    width: 357px;
-    font-size: 16px;
-    letter-spacing: 0.4px;
-    color: rgba(255, 255, 255, 0.6);
   }
 }
