--- a/cryptograf_website/styles/index.css
+++ b/cryptograf_website/styles/index.css
@@ -22,7 +22,6 @@ a {
 }
 
 header {
-  display: none;
   width: 100%;
   position: fixed;
   z-index: 100;
@@ -41,6 +40,7 @@ header {
 }
 
 #logo img {
+  display: none;
   width: 122px;
   height: 33px;
   opacity: 0.6;
@@ -96,6 +96,7 @@ header {
 
 /* graph styles */
 #graph-container {
+  padding-top: 60px;
   min-height: 90px;
   width: 100%;
   height: 30vh;
@@ -145,8 +146,8 @@ header {
 #graph-header {
   position: absolute;
   margin: 0 auto;
-  width: 120px;
-  height: 50px;
+  width: 150px;
+  height: 60px;
   top: 150px;
   left: 0;
   right: 0;
@@ -195,8 +196,9 @@ span {
 
 #top-text-container h1 {
   text-align: center;
+  padding-top: 20px;
   letter-spacing: 0.4px;
-  font-size: 23px;
+  font-size: 40px;
   font-family: 'SF-Pro-Display-Light', sans-serif;
 }
 
@@ -244,10 +246,10 @@ span {
 }
 
 #bottom-text-container h1 {
-  margin-top: 40px;
+  margin-top: 60px;
   text-align: center;
   letter-spacing: 0.4px;
-  font-size: 23px;
+  font-size: 40px;
   font-family: 'SF-Pro-Display-Light', sans-serif;
 }
 
@@ -272,12 +274,12 @@ span {
   flex-direction: column;
   align-items: center;
   width: 90%;
-  margin: 20px auto 0;
+  margin: 60px auto 0;
 }
 
 #features-title {
   font-family: "Helvetica";
-  font-size: 23px;
+  font-size: 40px;
   letter-spacing: 0.4px;
   color: #ffffff;
   margin-bottom: 25px;
@@ -310,6 +312,7 @@ span {
 #features-mid-title,
 #features-right-title {
   text-align: center;
+  font-size: 30px;
   font-family: "SF-Pro-Display-Light";
   color: #ffffff;
   letter-spacing: 0.4px;
@@ -327,12 +330,13 @@ span {
 }
 
 #stores {
+  height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
   background-color: #896aeb;
-  height: 170px;
 }
 
 #stores-images {
@@ -367,47 +371,53 @@ span {
 }
 
 footer {
+  height: 50vh;
   display: flex;
   margin: auto;
   flex-direction: column;
   justify-content: space-between;
   background-color:  #373845;
   align-items: center;
+  box-sizing: border-box;
+  padding-top: 70px;
 }
 
 #footer-mid-content {
   margin: 10px 0;
-  width: 114px;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #footer-mid-content img {
   opacity: 0.6;
-  width: 16px;
-  height: 16px;
+  width: 30px;
+  height: 30px;
 }
 
 #footer-left-content {
   margin: 10px 0;
-  font-size: 15px;
+  font-size: 23px;
   font-family: "CircularStd-Book", sans-serif;
   color: #FFFFFF;
   opacity: 0.6;
-  width: 199px;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #footer-right-content{
   margin: 10px 0;
-  width: 199px;
+  padding-top: 10px;
+  width: 100%;
+  text-align: center;
   color: #FFFFFF;
   opacity: 0.6;
   font-size: 15px;
   font-family: "CircularStd-Book", sans-serif;
+  border-top: 1px solid rgba(255,255,255,0.6);
 }
 
 
