--- a/cryptograf_website/styles/index.css
+++ b/cryptograf_website/styles/index.css
@@ -96,10 +96,10 @@ header {
 
 /* graph styles */
 #graph-container {
-  padding-top: 60px;
+  padding-top: 30px;
   min-height: 90px;
   width: 100%;
-  height: 30vh;
+  height: 45vh;
 }
 
 #graph {
@@ -132,9 +132,9 @@ header {
 #graph-logo {
   position: absolute;
   margin: 0 auto;
-  width: 50px;
-  height: 50px;
-  top: 90px;
+  width: 80px;
+  height: 80px;
+  top: 100px;
   left: 0;
   right: 0;
 }
@@ -146,9 +146,9 @@ header {
 #graph-header {
   position: absolute;
   margin: 0 auto;
-  width: 150px;
-  height: 60px;
-  top: 150px;
+  width: 260px;
+  height: 110px;
+  top: 190px;
   left: 0;
   right: 0;
 }
@@ -196,6 +196,8 @@ span {
 
 #top-text-container h1 {
   text-align: center;
+  height: 15vh;
+  box-sizing: border-box;
   padding-top: 20px;
   letter-spacing: 0.4px;
   font-size: 40px;
@@ -203,6 +205,7 @@ span {
 }
 
 #top-text-container p {
+  height: 40vh;
   box-sizing: border-box;
   padding: 20px 10px;
   text-align: center;
@@ -274,7 +277,7 @@ span {
   flex-direction: column;
   align-items: center;
   width: 90%;
-  margin: 60px auto 0;
+  margin: 100px auto 0;
 }
 
 #features-title {
@@ -288,7 +291,8 @@ span {
 #features-container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
+  height: 300vh;
 
 }
 
