--- a/cryptograf_website/styles/index.css
+++ b/cryptograf_website/styles/index.css
@@ -431,10 +431,446 @@ footer {
 /* End */
 
 @media only screen and (min-width: 414px) and (max-width: 767px) {
+  #header-container {
+    height: 90px;
+    margin: 0 auto;
+  }
+
+  #graph-container {
+    min-height: 90px;
+    width: 100%;
+    height: 55vh;
+  }
+
+  #graph {
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+    width: 100%;
+  }
+
+  #graph img {
+    position: absolute;
+    margin: 0 auto;
+    width: 60%;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+
+  #gradient-container {
+    position: absolute;
+    margin: 0 auto;
+    width: 90%;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    background-image: radial-gradient(70% 66% at center, rgba(255,255,255,0), #373845 70%);
+  }
+
+  #graph-logo {
+    position: absolute;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    top: 100px;
+    left: 0;
+    right: 0;
+  }
+
+  #graph-logo img {
+    width: 100%;
+  }
+
+  #graph-header {
+    position: absolute;
+    margin: 0 auto;
+    width: 400px;
+    height: 80px;
+    top: 100px;
+    left: 0;
+    right: 0;
+  }
+
+  #graph-header img {
+    width: 100%;
+  }
+
+  #cont {
+    width: 100%;
+    height: 100vh;
+  }
+
+  /* Zhekos part start */
+
+  #main-container {
+    width: 1170px;
+  }
+
+  #tmp {
+    height: 50vh;
+  }
+
+  #top-info-container {
+    margin-top: 40px;
+    height: 550px;
+  }
+
+  #bottom-info-container {
+    height: 450px;
+    margin: auto;
+  }
+
+  #top-row-container {
+    flex-direction: row;
+    justify-content: space-between;
+    height: 450px;
+  }
+
+  #bottom-row-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .phone-container {
+    margin-top: 0;
+    height: 637px;
+    width: 309px;
+  }
+
+  .phone-container img {
+    margin-left: 50px;
+    height: 438px;
+    width: 212px;
+  }
+
+  #phone-bottomn{
+    margin-right: 50px;
+    height: 450px;
+  }
+
+  #top-text-container {
+    box-sizing: border-box;
+    padding-left: 50px;
+    padding-top: 10px;
+    height: 50vh;
+
+  }
+
+  #top-text-container h1 {
+    text-align: left;
+    height: auto;
+  }
+
+  #bottom-text-container {
+    width: 528px;
+    height: 450px;
+    margin-left: 40px;
+  }
+
+  #bottom-text-container h1 {
+    text-align: left;
+    margin-top: 20px;
+  }
+
+
+  #top-text-container p {
+    padding: 30px 0;
+    padding-right: 60px;
+    text-align: left;
+    height: 200px;
+  }
+
+  #bottom-text-container p {
+    text-align: left;
+    padding: 40px 0;
+  }
+
+  #stores-container{
+    justify-content: space-between;
+    padding: 0;
+    width: 280px;
+  }
+
+/* Zhekos part end */
+
+/* Roman */
+
+/*#features{
+  width: 1170px;
+}*/
+
+#features-title{
+  font-size: 46px;
+  margin-bottom: 100px;
+}
+
+/* #features-container {
+  width: 1170px;
+} */
+
+#features-right {
+  margin-bottom: 100px;
+}
+
+#features-left img,
+#features-mid img,
+#features-right img {
+  margin-bottom: 19px;
+  width: 77px;
+  height: 77px;
+}
+
+#features-left-title,
+#features-mid-title,
+#features-right-title {
+  margin-bottom: 26px;
+  font-size: 32px;
+}
+
+#features-left-description,
+#features-mid-description,
+#features-right-description {
+  width: 357px;
+  font-size: 16px;
+}
+
+  footer {
+    height: 350px;
+  }
+
+  #stores {
+    height: 300px;
+  }
+  #stores-title {
+    font-size: 46px;
+  }
+  #stores-images{
+      width: 340px;
+  }
+
 
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
+
+  #header-container {
+    height: 90px;
+    margin: 0 auto;
+  }
+
+  #graph-container {
+    min-height: 90px;
+    width: 100%;
+    height: 55vh;
+  }
+
+  #graph {
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+    width: 100%;
+  }
+
+  #graph img {
+    position: absolute;
+    margin: 0 auto;
+    width: 89%;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+
+  #gradient-container {
+    position: absolute;
+    margin: 0 auto;
+    width: 90%;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    background-image: radial-gradient(70% 66% at center, rgba(255,255,255,0), #373845 70%);
+  }
+
+  #graph-logo {
+    position: absolute;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    top: 220px;
+    left: 0;
+    right: 0;
+  }
+
+  #graph-logo img {
+    width: 100%;
+  }
+
+  #graph-header {
+    position: absolute;
+    margin: 0 auto;
+    width: 400px;
+    height: 80px;
+    top: 355px;
+    left: 0;
+    right: 0;
+  }
+
+  #graph-header img {
+    width: 100%;
+  }
+
+  #cont {
+    width: 100%;
+    height: 100vh;
+  }
+
+  /* Zhekos part start */
+
+  #main-container {
+    width: 1170px;
+  }
+
+  #tmp {
+    height: 50vh;
+  }
+
+  #top-info-container {
+    height: 60vh;
+  }
+
+  #bottom-info-container {
+    height: 450px;
+    margin: auto;
+  }
+
+  #top-row-container {
+    flex-direction: row;
+    justify-content: space-between;
+    height: 450px;
+  }
+
+  #bottom-row-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .phone-container {
+    margin-top: 0;
+    height: 637px;
+    width: 309px;
+  }
+
+  .phone-container img {
+    margin-left: 50px;
+    height: 438px;
+    width: 212px;
+  }
+
+  #phone-bottomn{
+    margin-right: 50px;
+    height: 450px;
+  }
+
+  #top-text-container {
+    box-sizing: border-box;
+    padding-left: 50px;
+    padding-top: 10px;
+    height: 50vh;
+
+  }
+
+  #top-text-container h1 {
+    text-align: left;
+  }
+
+  #bottom-text-container {
+    width: 528px;
+    height: 450px;
+    margin-left: 40px;
+  }
+
+  #bottom-text-container h1 {
+    text-align: left;
+    margin-top: 20px;
+  }
+
+
+  #top-text-container p {
+    padding: 30px 0;
+    padding-right: 60px;
+    text-align: left;
+    height: 200px;
+  }
+
+  #bottom-text-container p {
+    text-align: left;
+    padding: 40px 0;
+  }
+
+  #stores-container{
+    justify-content: space-between;
+    padding: 0;
+    width: 280px;
+  }
+
+/* Zhekos part end */
+
+/* Roman */
+
+/*#features{
+  width: 1170px;
+}*/
+
+#features-title{
+  font-size: 46px;
+  margin-bottom: 100px;
+}
+
+/* #features-container {
+  width: 1170px;
+} */
+
+#features-right {
+  margin-bottom: 100px;
+}
+
+#features-left img,
+#features-mid img,
+#features-right img {
+  margin-bottom: 19px;
+  width: 77px;
+  height: 77px;
+}
+
+#features-left-title,
+#features-mid-title,
+#features-right-title {
+  margin-bottom: 26px;
+  font-size: 32px;
+}
+
+#features-left-description,
+#features-mid-description,
+#features-right-description {
+  width: 357px;
+  font-size: 16px;
+}
+
+  footer {
+    height: 350px;
+  }
+
+  #stores {
+    height: 300px;
+  }
+  #stores-title {
+    font-size: 46px;
+  }
+  #stores-images{
+      width: 340px;
+  }
 
 }
 
