--- a/cryptograf_website/styles/index.css
+++ b/cryptograf_website/styles/index.css
@@ -422,14 +422,17 @@ footer {
 
 #footer-left-content {
   margin: 10px 0;
-  font-size: 23px;
-  font-family: "CircularStd-Book", sans-serif;
-  color: #FFFFFF;
-  opacity: 0.6;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+#footer-left-content a {
+  color: #FFFFFF;
+  opacity: 0.6;
+  font-size: 23px;
+  font-family: "CircularStd-Book", sans-serif;  
 }
 
 #footer-right-content{
