--- a/cryptograf_website/styles/index.css
+++ b/cryptograf_website/styles/index.css
@@ -64,10 +64,10 @@ header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: #373845;
-  height: 200px;
+  height: 240px;
   display: none;
 }
 
